<resources>
    <string name="app_name">Expenses IQ</string>
    <string name="login_activity_title">Login</string>
    <string name="company_logo_content_description">Company Logo</string>
    <string name="username_login_label">Username</string>
    <string name="password_login_label">Password</string>
    <string name="username_sign_up_label">Username *</string>
    <string name="password_sign_up_label">Password *</string>
    <string name="sign_up_button">Sign up</string>
    <string name="login_button">Login</string>
    <string name="signUp_activity_title">Sign Up</string>
    <string name="currency_label">Currency *</string>
    <string name="language_label">Language *</string>
    <string name="bank_account_balance_label">Bank Account Balance</string>
    <string name="cash_label">Cash</string>
    <string name="confirm_password_label">Confirm Password *</string>
    <string name="title_activity_overview">Account Overview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings_overview_menu">Settings</string>
    <string name="logout_overview_menu">Logout</string>
    <string name="image_of_app_icon_content_description">Image of App Icon</string>
    <string name="overview_navigation_menu">Overview</string>
    <string name="accounts_navigation_menu">Accounts</string>
    <string name="transactions_navigation_menu">Transactions</string>
    <string name="reports_navigation_menu">Reports</string>
    <string name="expense_tab_header">Expense</string>
    <string name="income_tab_header">Income</string>
    <string name="cash_flow_tab_header">Cash Flow</string>
    <string name="balance_tab_header">Balance</string>
    <string name="add_expense_label">Add Expense</string>
    <string name="add_income_label">Add Income</string>

    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />

    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat" />

    <string name="account_icon_content_description">Account Icon</string>
    <string name="add_transaction_content_description">Add Transaction</string>
    <string name="hide_account_image_content_description">Hide Account Image</string>
    <string name="view_transaction_content_description">View Transaction</string>
    <string name="view_transactions_content_description">View Transactions</string>
    <string name="edit_account_content_description">Edit Account</string>
    <string name="add_transaction_label">Add Transaction</string>
    <string name="delete_account_label">Delete Account</string>
    <string name="hide_account_label">Hide Account</string>
    <string name="view_transactions_label">View Transactions</string>
    <string name="make_a_transfer_label">Make a Transfer</string>
    <string name="edit_account_label">Edit Account</string>

    <string name="hidden_account_text">Hidden ( ! )</string>
    <string name="account_description_text">Description: </string>
    <string name="show_hidden_accounts_text">Show Hidden Accounts?</string>
    <string name="save_text">Save</string>
    <string name="type_text">Type *</string>
    <string name="account_name_text">Name *</string>
    <string name="initial_account_balance_text">Initial Balance *</string>
    <string name="current_account_balance_text">Current Balance *</string>
    <string name="account_is_hidden_text">Hidden?</string>
    <string name="optional_hint">Optional</string>
    <string name="initial_text">Initial: </string>
    <string name="totalAmountofMoney_text">Total Amount of Money</string>
    <string name="totalCurrency_text">Net Balance</string>
    <string name="numberofAccounts_text">Number of Accounts</string>
    <string name="overview_text">Overview</string>
    <string name="currency_conversion_label">Currency Conversion</string>
    <string name="account_name_label">Account Name</string>
    <string name="before_label">Before</string>
    <string name="after_label">After</string>
    <string name="from_label">From *</string>
    <string name="to_label">To *</string>
    <string name="exchange_rate_label">Exchange Rate</string>
    <string name="transfer_label">Transfer</string>
    <string name="label">Amount *</string>
    <string name="note_label">Note</string>
    <string name="account_label">Account *</string>
    <string name="account_balance_label">Account Balance</string>
    <string name="income_label">Income</string>
    <string name="expense_label">Expense</string>
    <string name="funds_will_be_applied_in_the_currency_of_the_account_label">Funds will be applied in the currency of the account</string>
    <string name="apply_label">Apply</string>
    <string name="description_label_text">Description</string>
    <string name="cancel_dialog_option">Cancel</string>
    <string name="save_dialog_option">Save</string>
    <string name="are_you_sure_dialog_option">Are you sure you want to delete</string>
    <string name="delete_account_dialog_option">Delete Account</string>
    <string name="period_label">Period</string>
    <string name="account_transaction_label">Account</string>
    <string name="transferred_money_to_text">Transferred money to</string>
    <string name="note_text">Note:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_fragment_delete">Delete</string>
    <string name="net_balance_string">Net Balance:</string>
    <string name="my_accounts_text_title">My Accounts</string>
    <string name="recieved_money_from_transaction">Received money from</string>
    <string name="account_deleted_transaction">\'Account Deleted\'</string>
    <string name="account_hidden_text">\'Account Hidden\'</string>
    <string name="recent_transactions_text">Recent Transactions</string>
    <string name="no_transactions_found_text">No Transactions found</string>
    <string name="legend_title">Legend</string>
    <string name="expense_by_category_title">Expense by Category</string>
    <string name="from_this_week_hint">(from this week)</string>
    <string name="income_vs_expense_title">Income Vs Expense</string>

</resources>