<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.mcmah113.mcmah113expensesiq.AccountsDialogFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/ViewTransactions"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewTransactions"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/view_transaction_content_description"
                android:src="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_transactions_label"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/MakeTransfer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewMakeATransfer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/view_transactions_content_description"
                android:src="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_a_transfer_label"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/AddTransaction"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewAddTransaction"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/add_transaction_content_description"
                android:src="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction_label"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/EditAccount"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewEditAccount"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/edit_account_content_description"
                android:src="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_account_label"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DeleteAccount"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewDeleteAccount"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/edit_account_content_description"
                android:src="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_account_label"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/HideAccount"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageViewHideAccount"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/hide_account_image_content_description"
                android:src="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_account_label"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
